--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
-# Ignore env specific.
-.env*
-
-# Ignore modules.
-node_modules
-npm-shrinkwrap.json
-package-lock.json
-
-# Ignore npm garbages.
-npm-debug.log
-isolate-*
-
-# Ignore system files.
+# System
+#
 .DS_Store
+Thumbs.db
 *.sw*
 
+# Env
+#
+.env*
+
+# Node.js
+#
+node_modules
+npm-debug.log*
+npm-shrinkwrap.json
+yarn-debug.log*
+yarn-error.log*
+.yarn-integrity
+package-lock.json
+isolate-*
