--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "bin": "index.js",
   "dependencies": {
+    "ansi-colors": "1.0.1",
     "axios": "0.17.1",
     "cheerio": "1.0.0-rc.2",
-    "dotenv": "5.0.0"
+    "dotenv": "5.0.0",
+    "fancy-log": "1.3.2",
+    "lodash": "4.17.5"
   }
 }
