--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cheerio": "1.0.0-rc.2",
     "dotenv": "5.0.0",
     "fancy-log": "1.3.2",
+    "fs-extra": "5.0.0",
     "lodash": "4.17.5"
   }
 }
